# cs3003

adts/stack/: pom.xml
adts/stack/src/main/java/edu/uc/cs/cs3003/: App.java  GStack.java  Stack.java
adts/stack/src/test/java/edu/uc/cs/cs3003/: AppTest.java
arrays/: Makefile  arrays.c
asts/: CMakeLists.txt  ast.cpp  ast.js  playst.py  requirements.txt
binding/: storage_example1.c  storage_example2.c  storage_example3.c  storage_example4.c
comprehensions/: comprehensions.py
cpp_vtable/: CMakeLists.txt  compile_commands.json  cpp_vtable.cpp
curry_python/: curry.py
curry_speed/: README.md  speed.py
derivation_evaluation/: ast_dot.py
dynamic_type_js/: index.js  package-lock.json  package.json
dynamic_type_python/: example.py
expressions/: relational.cpp
function_prototypes/: CMakeLists.txt  definition.c  run.sh  user.c
gc/: CleanerDemo.java  GarbageCollection.java  Makefile  README.md  destructable.cpp  refcnt.py
haskell/: CHANGELOG.md  demos.cabal
haskell/src/: Babel.hs  Demos.hs  Forecast.hs  MyError.hs  Play.hs  StartsWithX.hs
haskell/src/Days/Day1/: Demos.hs
haskell_curry/: CHANGELOG.md  haskell-curry.cabal
haskell_curry/src/: Curry.hs
interfaces/: go.mod  interfaces.go
intro_to_functional_python/: README.md  filter.py  foreach.py  map.py  mcnally.py
java_late_binding/: Demo.java
java_vtable/: Child.java  Deep.java  Makefile  Parent.java  Vimple.java
keepif/: CHANGELOG.md  keepif.cabal
keepif/src/: KeepIf.hs  Main.hs
lifetime_speed/: CMakeLists.txt  LifetimeSpeed.md  gather.sh  main.cpp  results-slow.csv  results.csv
loop_speed/: CMakeLists.txt  loop_speed.cpp  results-i9-m2.ods  results-i9-optimized.ods  results.csv  results.ods
merge_notes/: notes.md
oo/: CarDemo.java  DefaultConstructor.java  MammalDemo.java
paradigms/: README.md
paradigms/functional/: CHANGELOG.md  IntegerSquareRoot.cabal
paradigms/functional/html/: IntegerSquareRootD.html  doc-index.html  index.html
paradigms/functional/src/: IntegerSquareRoot.hs  IntegerSquareRootD.hs
paradigms/haskell/src/: IntegerSquareRoot.hs
paradigms/imperative/: quintessential.py
paradigms/java/: Number.java
paradigms/logic/: integer_square_rootd.pl
paradigms/oo/: Number.java  NumberD.java  NumberDocumented.java
paradigms/oo/html/: NumberDocumented.html  allclasses-index.html  allpackages-index.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-tree.html  package-summary.html  package-tree.html  type-search-index.js
paradigms/oo_mp/: rootable.st
paradigms/prolog/: integer_square_root.pl
paradigms/python/: integer_square_root.py  quintessential.py
pattern_matching/: calculator.py  demo.py  destruct.py  exec.py  instance.py  pattern-plus.py  pattern.py
pattern_matching/calculator/: __init__.py  calculator.py
pattern_matching/flake/: CMakeLists.txt  flake-alpha.cpp  flake-alpha2.cpp  flake-alpha2a.cpp  flake-alpha2aa.cpp  flake-alpha3.cpp  flake-complete.cpp  flake.cpp  flake.py
pattern_matching/instances/: __init__.py  instance.py
pattern_matching/patterns/: __init__.py  pattern.py
pin_the_type/: pyn.py
prolog_append/: my_append.pl  permute.pl  reverse.pl  suffix.pl
prolog_backtracking_lists/: anything.pl  index.pl  member.pl  permutation.pl  temp.pl
prolog_bsort/: bsort.pl  bsort_cut.pl
prolog_intro/: intro.pl  sort.pl  square.pl
prolog_intro_three/: backtracking_generate_integer.md  crossword.pl  integer.pl  succ.pl
prolog_sw/: southwest.pl
prototypal/: index-new.js  index.js  package.json  refrigerator.js
python_attributes/: attributes.py
recursive_descent/: README.md  parser.py  pseudocode.py  requirements.txt  testing.input
recursive_descent/lexer/: token.py  tokenizer.py
recursive_descent/parser/: parser.py
scheme/applicative/: applicative.rkt
scope_lifetime/: CMakeLists.txt  Makefile  dynamic_scope.py  lifetime.cpp  lifetime.py  locals.py  loop_scope.cpp  loop_scope.py  loop_scope_error.py  real_locals.py  referencing_environment.py  scope.cpp  scope.sh  scope_ne_lifetime.cpp  static_scope.py
stack_frames/: CMakeLists.txt  Makefile  main.c
subprograms/: CMakeLists.txt  cardgame.py  compile_commands.json  coroutine.cpp  coroutine.py  generator.py  go.mod  overload  overload.go  simple_call.cpp  stack_frame.c  subprograms.cpp  typename.h
tail_recursion/: CHANGELOG.md  tail-recursion.cabal
tail_recursion/src/: Main.hs  TailRecursion.hs
tail_recursion_c/: Makefile  recursion.c
traits/: Cargo.toml
traits/src/: main.rs
use_after_free/: CMakeLists.txt  compile_commands.json  use_after_free.cpp
vtable_size_v_object_size_java/: .gitignore  Makefile  generate.py  results.ods
vtable_size_v_object_size_java/java/: Demo.java
